Update per review

--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
@@ -1,12 +1,13 @@
-= Release v2.13.2
+= Release {release-version}
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-19
+:revdate: 2026-01-22
 :page-revdate: {revdate}
+:release-version: v2.13.2
 ifeval::["{build-type}" == "community"]
 :rn-component-version: v2.13
-:rn-istio-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
+:rn-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-aggregation-layer-is-required: https://ranchermanager.docs.rancher.com/{rn-component-version}/api/extension-apiserver#aggregation-layer-is-required
 :rn-disk-space: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space
@@ -17,7 +18,7 @@ ifeval::["{build-type}" == "community"]
 :rn-private-registry: https://docs.k3s.io/installation/private-registry
 endif::[]
 ifeval::["{build-type}" != "community"]
-:rn-istio-istio: xref:observability/istio/istio.adoc
+:rn-istio: xref:observability/istio/istio.adoc
 :rn-installation-requirements: xref:installation-and-upgrade/requirements/requirements.adoc
 :rn-aggregation-layer-is-required: xref:api/extension-apiserver.adoc#_aggregation_layer_is_required
 :rn-disk-space: xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc#_disk_space
@@ -30,12 +31,7 @@ endif::[]
 
 [IMPORTANT]
 ====
-Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. When upgrading Rancher instances to Rancher Prime v2.13.1 or higher, you may see failures with clusters utilizing the ingress-nginx ingress controller. Please refer to this https://support.scc.suse.com/s/kb/Upgrade-to-Rancher-Prime-v2-13-1-fails-in-clusters-with-ingress-nginx?language=en_US[knowledge base article] to resolve upgrade issues.
-
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
 
 [IMPORTANT]
@@ -48,27 +44,27 @@ If you are using Active Directory Federation Service (AD FS), upgrading to Ranch
 For more information see https://github.com/rancher/rancher/issues/48655[#48655].
 ====
 
+ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 ====
-{rn-istio-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
+{rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+Rancher {release-version} is the latest patch release of Rancher. This is a Community version release that introduces maintenance updates and bug fixes.
+
+For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes](.
+endif::[]
 
 ifeval::["{build-type}" != "community"]
-Rancher v2.13.2 is the latest patch release of Rancher. This is a Prime version release that introduces new features, enhancements, and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+Rancher {release-version} is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
 
-== What's New - SUSE Rancher Prime v2.13.2
+== What's New - SUSE Rancher Prime {release-version}
 
-=== Rancher Prime Chart Name
+=== Rancher Prime Chart Name Reverted
 
-[IMPORTANT]
-====
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
-====
-
-* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or higher, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 endif::[]
 
 //== Rancher General
@@ -97,9 +93,9 @@ endif::[]
 
 //=== Major Bug Fixes
 
+ifeval::["{build-type}" != "community"]
 == K3s Provisioning
 
-ifeval::["{build-type}" != "community"]
 === Major Bug Fixes
 
 * Fixed an issue where using Cluster Autoscaler with K3s clusters during node removal while scaling down a `machinePool`, it was possible that a node was immediately re-added before the pool was resized. This was a race condition and eventually the pool was reduced to the required size based on the workload. See https://github.com/rancher/rancher/issues/52859[#52859].
@@ -131,12 +127,7 @@ ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 .Chart Name Change for Rancher Prime
 ====
-Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or higher, the chart name you use will be `rancher-prime` instead, for example `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
-
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
 endif::[]
 
@@ -191,11 +182,11 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Images
 
-* rancher/rancher:v2.13.2
+* rancher/rancher:{release-version}
 
 == Tools
 
-* CLI - https://github.com/rancher/cli/releases/tag/v2.13.2[v2.13.2]
+* CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 
 == Kubernetes Versions for RKE2/K3s
 
