--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -2,12 +2,12 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-20
+:revdate: 2026-01-22
 :page-revdate: {revdate}
 :release-version: v2.13.2
 ifeval::["{build-type}" == "community"]
 :rn-component-version: v2.13
-:rn-istio-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
+:rn-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-aggregation-layer-is-required: https://ranchermanager.docs.rancher.com/{rn-component-version}/api/extension-apiserver#aggregation-layer-is-required
 :rn-disk-space: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space
@@ -18,7 +18,7 @@ ifeval::["{build-type}" == "community"]
 :rn-private-registry: https://docs.k3s.io/installation/private-registry
 endif::[]
 ifeval::["{build-type}" != "community"]
-:rn-istio-istio: xref:observability/istio/istio.adoc
+:rn-istio: xref:observability/istio/istio.adoc
 :rn-installation-requirements: xref:installation-and-upgrade/requirements/requirements.adoc
 :rn-aggregation-layer-is-required: xref:api/extension-apiserver.adoc#_aggregation_layer_is_required
 :rn-disk-space: xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc#_disk_space
@@ -47,7 +47,7 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 ====
-{rn-istio-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
+{rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 endif::[]
 
