--- a/versions/v2.13/modules/en/pages/security/security-overview.adoc
+++ b/versions/v2.13/modules/en/pages/security/security-overview.adoc
@@ -78,6 +78,71 @@ Please note that new reports are no longer shared or made publicly available.
 
 Rancher is committed to informing the community of security issues in our products. For the list of CVEs (Common Vulnerabilities and Exposures) for issues we have resolved, refer to xref:security/cves.adoc[this page.]
 
+== Kubernetes Security Best Practices
+
+For recommendations on securing your Kubernetes cluster, refer to the https://kubernetes.io/docs/tasks/administer-cluster/securing-a-cluster/[Kubernetes Cluster Security Best Practices] guide.
+
 == Rancher Security Best Practices
 
 For recommendations on securing your Rancher Manager deployments, refer to the xref:security/rancher-security-best-practices.adoc[Rancher Security Best Practices] guide.
+
+== Rancher Kubernetes Distributions (K3s/RKE2) Self-Assessment and Hardening Guides
+
+Rancher uses the following Kubernetes distributions:
+
+* https://documentation.suse.com/en-us/cloudnative/rke2/[*RKE2*] is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.
+* https://documentation.suse.com/en-us/cloudnative/k3s/[*K3s*] is a fully conformant, lightweight Kubernetes distribution. It is easy to install, with half the memory requirement of upstream Kubernetes, all in a binary of less than 100 MB.
+
+To harden a Kubernetes cluster that's running a distribution other than those listed, refer to your Kubernetes provider's docs.
+
+=== Hardening Guides and Benchmark Versions
+
+Each self-assessment guide is accompanied by a hardening guide. These guides were tested alongside the listed Rancher releases. Each self-assessment guide was tested on a specific Kubernetes version and CIS benchmark version. If a CIS benchmark has not been validated for your Kubernetes version, you can use the existing guides until a guide for your version is added.
+
+=== RKE2 Guides
+
+|===
+| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide
+
+| Standalone RKE2
+| Kubernetes v1.27
+| CIS v1.9
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment19.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+
+| Standalone RKE2
+| Kubernetes v1.28
+| CIS v1.10
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment110.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+
+| Standalone RKE2
+| Kubernetes v1.29 and above
+| CIS v1.11
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment111.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+|===
+
+=== K3s Guides
+
+|===
+| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide
+
+| Standalone K3s
+| Kubernetes v1.27
+| CIS v1.9
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.9.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+
+| Standalone K3s
+| Kubernetes v1.28
+| CIS v1.10
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.10.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+
+| Standalone K3s
+| Kubernetes v1.29 and above
+| CIS v1.11
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.11.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+|===
