--- a/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
@@ -1,12 +1,13 @@
-= Release v2.12.6
+= Release {release-version}
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-19
+:revdate: 2026-01-22
 :page-revdate: {revdate}
-ifeval::["{build-type}" == "community"]
+:release-version: v2.12.6
 :rn-component-version: v2.12
-:rn-istio-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
+ifeval::["{build-type}" == "community"]
+:rn-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-aggregation-layer-is-required: https://ranchermanager.docs.rancher.com/{rn-component-version}/api/extension-apiserver#aggregation-layer-is-required
 :rn-disk-space: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space
@@ -17,7 +18,7 @@ ifeval::["{build-type}" == "community"]
 :rn-private-registry: https://docs.k3s.io/installation/private-registry
 endif::[]
 ifeval::["{build-type}" != "community"]
-:rn-istio-istio: xref:observability/istio/istio.adoc
+:rn-istio: xref:observability/istio/istio.adoc
 :rn-installation-requirements: xref:installation-and-upgrade/requirements/requirements.adoc
 :rn-aggregation-layer-is-required: xref:api/extension-apiserver.adoc#_aggregation_layer_is_required
 :rn-disk-space: xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc#_disk_space
@@ -40,14 +41,14 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 
 [IMPORTANT]
 ====
-{rn-istio-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
+{rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/v2.12.0[v2.12.0 release notes].
 
 == Changes Since v2.12.5
 
-See the full list of https://github.com/rancher/rancher/compare/v2.12.5...v2.12.6[changes].
+See the full list of https://github.com/rancher/rancher/compare/v2.12.5%E2%80%A6{release-version}[changes].
 
 == Install/Upgrade Notes
 
@@ -103,11 +104,11 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Images
 
-* rancher/rancher:v2.12.6
+* rancher/rancher:{release-version}
 
 == Tools
 
-* CLI - https://github.com/rancher/cli/releases/tag/v2.12.6[v2.12.6]
+* CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 
 === Kubernetes Versions for RKE2/K3s
 
