--- a/versions/v2.11/modules/zh/pages/release-notes/v2.11.10.adoc
+++ b/versions/v2.11/modules/zh/pages/release-notes/v2.11.10.adoc
@@ -1,11 +1,12 @@
-= Release v2.11.10
+= Release {release-version}
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-19
+:revdate: 2026-01-22
 :page-revdate: {revdate}
-ifeval::["{build-type}" == "community"]
+:release-version: v2.11.10
 :rn-component-version: v2.11
+ifeval::["{build-type}" == "community"]
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
 :rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
@@ -31,7 +32,7 @@ For more information on new features in the general minor release see the https:
 
 == Changes Since v2.11.8
 
-See the full list of https://github.com/rancher/rancher/compare/v2.11.9...v2.11.10[changes].
+See the full list of https://github.com/rancher/rancher/compare/v2.11.9%E2%80%A6{release-version}[changes].
 
 == Install/Upgrade Notes
 
@@ -58,11 +59,11 @@ Image artifact digests were renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up 
 
 === Images
 
-* rancher/rancher:v2.11.10
+* rancher/rancher:{release-version}
 
 === Tools
 
-* CLI - https://github.com/rancher/cli/releases/tag/v2.11.10[v2.11.10]
+* CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 * RKE - https://github.com/rancher/rke/releases/tag/v1.8.5[v1.8.5]
 
 === Kubernetes Versions for RKE
