Update per review

--- a/versions/v2.10/modules/en/pages/release-notes/v2.10.11.adoc
+++ b/versions/v2.10/modules/en/pages/release-notes/v2.10.11.adoc
@@ -1,11 +1,12 @@
-= Release v2.10.11
+= Release {release-version}
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-19
+:revdate: 2026-01-22
 :page-revdate: {revdate}
-ifeval::["{build-type}" == "community"]
+:release-version: v2.10.11
 :rn-component-version: v2.10
+ifeval::["{build-type}" == "community"]
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
 :rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
@@ -33,7 +34,7 @@ For more information on new features in the general minor release see the https:
 
 == Changes Since v2.10.10
 
-See the full list of https://github.com/rancher/rancher/compare/v2.10.10...v2.10.11[changes].
+See the full list of https://github.com/rancher/rancher/compare/v2.10.10%E2%80%A6{release-version}[changes].
 
 == Install/Upgrade Notes
 
@@ -74,11 +75,11 @@ RKE2 and K3s provide stronger security, and move away from upstream-deprecated D
 
 === Images
 
-* rancher/rancher:v2.10.11
+* rancher/rancher:{release-version}
 
 === Tools
 
-* CLI - https://github.com/rancher/cli/releases/tag/v2.10.11[v2.10.11]
+* CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 * RKE - https://github.com/rancher/rke/releases/tag/v1.7.9[v1.7.9]
 
 === Kubernetes Versions for RKE
