--- a/versions/v2.10/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.10/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -18,6 +18,11 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 |===
 | Rancher Version | Webhook Version | Availability in Prime | Availability in Community
 
+| v2.10.11
+| v0.6.12
+| &check;
+| N/A
+
 | v2.10.10
 | v0.6.11
 | &check;
