--- a/versions/v2.10/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.10/modules/en/pages/faq/deprecated-features.adoc
@@ -14,6 +14,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+| https://github.com/rancher/rancher/releases/tag/v2.10.11[2.10.11]
+| January 28, 2026
+
 | https://github.com/rancher/rancher/releases/tag/v2.10.10[2.10.10]
 | September 25, 2025
 
