Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -29,10 +29,12 @@ ifeval::["{build-type}" != "community"]
 :rn-private-registry: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html
 endif::[]
 
+ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 ====
 The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
+endif::[]
 
 [IMPORTANT]
 ====
