--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
@@ -2,11 +2,11 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-22
+:revdate: 2026-01-23
 :page-revdate: {revdate}
 :release-version: v2.13.2
-ifeval::["{build-type}" == "community"]
 :rn-component-version: v2.13
+ifeval::["{build-type}" == "community"]
 :rn-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
 :rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
 :rn-aggregation-layer-is-required: https://ranchermanager.docs.rancher.com/{rn-component-version}/api/extension-apiserver#aggregation-layer-is-required
@@ -29,10 +29,12 @@ ifeval::["{build-type}" != "community"]
 :rn-private-registry: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html
 endif::[]
 
+ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 ====
 The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
+endif::[]
 
 [IMPORTANT]
 ====
@@ -73,11 +75,15 @@ endif::[]
 
 //=== Major Bug Fixes
 
-//== Rancher App (Global UI)
+== Rancher App (Global UI)
 
 //=== Features and Enhancements
 
-//=== Major Bug Fixes
+=== Major Bug Fixes
+
+* Fixed an issue where the selection of pods in the Rancher UI (*Workloads > Pods*) would reset when the status of a pod changed. See https://github.com/rancher/dashboard/issues/16094[#16094]
+
+* Added additional improvements to reduce the amount of failed network requests when fetching resources shown in lists in the Rancher UI by reducing the length of the URL used in the request. This failure was more likely to happen when viewing resources in the local cluster as an administrator. See https://github.com/rancher/dashboard/issues/16216[#16216].
 
 //== Authentication
 
