--- a/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-22
+:revdate: 2026-01-23
 :page-revdate: {revdate}
 :release-version: v2.12.6
 :rn-component-version: v2.12
@@ -49,6 +49,14 @@ For more information on new features in the general minor release, see the https
 == Changes Since v2.12.5
 
 See the full list of https://github.com/rancher/rancher/compare/v2.12.5%E2%80%A6{release-version}[changes].
+
+== Rancher App (Global UI)
+
+=== Major Bug Fixes
+
+* Fixed an issue where the selection of pods in the Rancher UI (*Workloads > Pods*) would reset when the status of a pod changed. See https://github.com/rancher/dashboard/issues/16095[#16095]
+
+* Added additional improvements to reduce the amount of failed network requests when fetching resources shown in lists in the Rancher UI by reducing the length of the URL used in the request. This failure was more likely to happen when viewing resources in the local cluster as an administrator. See https://github.com/rancher/dashboard/issues/16217[#16217].
 
 == Install/Upgrade Notes
 
