--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -56,7 +56,7 @@ endif::[]
 ifeval::["{build-type}" == "community"]
 Rancher {release-version} is the latest patch release of Rancher. This is a Community version release that introduces maintenance updates and bug fixes.
 
-For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes](.
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes].
 endif::[]
 
 ifeval::["{build-type}" != "community"]
