Tweak title level

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -186,21 +186,21 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Versions
 
-== Images
+=== Images
 
 * rancher/rancher:{release-version}
 
-== Tools
+=== Tools
 
 * CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 
-== Kubernetes Versions for RKE2/K3s
+=== Kubernetes Versions for RKE2/K3s
 
 * v1.34.3 (Default)
 * v1.33.7
 * v1.32.11
 
-== Rancher Helm Chart Versions
+=== Rancher Helm Chart Versions
 
 In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm charts are named with a major version that starts with _100_. This avoids simultaneous upstream changes and Rancher changes from causing conflicting version increments. This also complies with semantic versioning (SemVer), which is a requirement for Helm. You can see the upstream version number of a chart in the build metadata, for example: `100.0.0+up2.1.0`. See https://github.com/rancher/rancher/issues/32294[#32294].
 
