Revert chart name change introduced in Rancher Prime v2.13.1

--- a/shared/modules/ROOT/partials/en/rancher-chart-rename.adoc
+++ b/shared/modules/ROOT/partials/en/rancher-chart-rename.adoc
@@ -1,4 +1,4 @@
 [IMPORTANT]
 ====
-As of Rancher v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This may cause failures with clusters utilizing the ingress-nginx ingress controller. Please refer to this https://support.scc.suse.com/s/kb/Upgrade-to-Rancher-Prime-v2-13-1-fails-in-clusters-with-ingress-nginx?language=en_US[knowledge base article] to resolve issues during upgrade.
+Rancher Prime v2.13.2 reverts the chart name change introduced in Rancher Prime v2.13.1. The chart name changed from `rancher-prime` back to `rancher`.
 ====
