--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 :description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation
 
@@ -213,7 +213,7 @@ Because `rancher` is the default option for `ingress.tls.source`, we are not spe
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin
@@ -257,7 +257,7 @@ When `agent-tls-mode` is set to `strict` (the default value for new installs of 
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -298,7 +298,7 @@ If you want to check if your certificates are correct, see xref:../../../faq/tec
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -310,7 +310,7 @@ If you are using a Private CA signed certificate , add `--set privateCA=true` to
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
