--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 These instructions capture a quick way to set up a proof-of-concept Rancher installation.
@@ -140,7 +140,7 @@ See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_passw
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io \
   --set replicas=1 \
@@ -150,7 +150,7 @@ helm install rancher rancher-prime/rancher-prime \
 
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
-helm install rancher rancher-prime/rancher-prime `
+helm install rancher rancher-prime/rancher `
   --namespace cattle-system `
   --set hostname=<IP_OF_LINUX_NODE>.sslip.io `
   --set replicas=1 `
