--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 The following instructions will guide you through upgrading a Rancher server that was installed on a Kubernetes cluster with Helm. These steps also apply to air-gapped installs with Helm.
@@ -74,7 +74,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,plain]
 ----
- helm fetch rancher-prime/rancher-prime
+ helm fetch rancher-prime/rancher
 ----
 +
 You can fetch the chart for the specific version you are upgrading to by adding in the `--version=` tag.  For example:
@@ -83,7 +83,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,plain]
 ----
- helm fetch rancher-prime/rancher-prime --version=2.6.8
+ helm fetch rancher-prime/rancher --version=2.6.8
 ----
 
 === 3. Upgrade Rancher
@@ -138,7 +138,7 @@ Take all the values from the previous step and append them to the command using 
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm upgrade rancher rancher-prime/rancher-prime \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -156,7 +156,7 @@ If you deploy Rancher through the AWS Marketplace, the deployment name is 'ranch
 Thus:
 
 ----
-helm upgrade rancher-prime rancher-prime/rancher-prime \
+helm upgrade rancher-prime rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -176,7 +176,7 @@ Alternatively, it's possible to export the current values to a file and referenc
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 ----
- helm upgrade rancher rancher-prime/rancher-prime \
+ helm upgrade rancher rancher-prime/rancher \
    --namespace cattle-system \
    -f values.yaml \
    --version=2.6.8
