--- a/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 If you are migrating Rancher to a new Kubernetes cluster, you don't need to install Rancher on the new cluster first. If Rancher is restored to a new cluster with Rancher already installed, it can cause problems.
@@ -170,7 +170,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=<same hostname as the server URL from the first Rancher server> \
   --version x.y.z
@@ -192,7 +192,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime -n cattle-system -f rancher-values.yaml --version x.y.z
+helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
 ----
 ====
 
