--- a/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-17
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 Rancher-Webhook is an essential component of Rancher that works in conjunction with Kubernetes to enhance security and enable critical features for Rancher-managed clusters.
@@ -87,7 +87,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
