--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/install-rancher.adoc
@@ -1,6 +1,6 @@
 = 在 Kubernetes 集群上安装/升级 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 :description: 了解如何在开发和生产环境中安装 Rancher。了解单节点和高可用安装
 
@@ -210,7 +210,7 @@ Rancher 生成的证书::
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[] 
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin
@@ -246,7 +246,7 @@ Let's Encrypt::
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -287,7 +287,7 @@ deployment "rancher" successfully rolled out
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -299,7 +299,7 @@ helm install rancher rancher-prime/rancher-prime \
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
