--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -1,6 +1,6 @@
 = 3. 安装 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 
@@ -83,7 +83,7 @@ kubectl create namespace cattle-system
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm upgrade --install rancher rancher-prime/rancher-prime \
+helm upgrade --install rancher rancher-prime/rancher \
    --namespace cattle-system \
    --set hostname=rancher.example.com \
    --set proxy=http://${proxy_host} \
