--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -1,6 +1,6 @@
 = 更新 {rancher-product-name} 证书
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 == 更新私有 CA 证书
@@ -126,7 +126,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher-prime \
+    helm upgrade rancher rancher-prime/rancher \
      --namespace cattle-system \
      -f values.yaml \
      --version <DEPLOYED_RANCHER_VERSION>
@@ -285,7 +285,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,bash]
 ----
-helm upgrade rancher rancher-prime/rancher-prime \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
