--- a/versions/v2.13/modules/zh/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -1,6 +1,6 @@
 = 启用实验功能
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 Rancher 包含一些默认关闭的实验功能。在某些情况下，例如当你认为使用xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[不支持的存储类型]的好处大于使用未经测试的功能的风险时，你可能想要启用实验功能。为了让你能够试用这些默认关闭的功能，我们引入了功能开关（feature flag）。
@@ -40,7 +40,7 @@ Rancher 包含一些默认关闭的实验功能。在某些情况下，例如当
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
