--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 This section is about how to deploy Rancher for your air gapped environment in a high-availability Kubernetes installation. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.
@@ -40,7 +40,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher-prime
+helm fetch rancher-prime/rancher
 ----
 ** To fetch a specific version:
 +
@@ -57,7 +57,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher-prime --version=<version>
+helm fetch rancher-prime/rancher --version=<version>
 ----
 
 === 2. Choose your SSL Configuration
