--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 == Updating a Private CA Certificate
@@ -128,7 +128,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher-prime \
+    helm upgrade rancher rancher-prime/rancher \
      --namespace cattle-system \
      -f values.yaml \
      --version <DEPLOYED_RANCHER_VERSION>
@@ -289,7 +289,7 @@ include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,bash]
 ----
-helm upgrade rancher rancher-prime/rancher-prime \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
