--- a/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 Rancher includes some features that are experimental and disabled by default. You might want to enable these features, for example, if you decide that the benefits of using an xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[unsupported storage type] outweighs the risk of using an untested feature. Feature flags were introduced to allow you to try these features that are not enabled by default.
@@ -42,7 +42,7 @@ When installing Rancher with a Helm chart, use the `--set` option. In the below 
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
