--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -1,6 +1,6 @@
 = 4. 安装 {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 本文介绍如何在高可用 Kubernetes 安装的离线环境部署 Rancher。离线环境可以是 Rancher Server 离线安装、防火墙后面或代理后面。
@@ -39,7 +39,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher-prime
+helm fetch rancher-prime/rancher
 ----
 ** To fetch a specific version:
 +
@@ -56,7 +56,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher-prime --version=<version>
+helm fetch rancher-prime/rancher --version=<version>
 ----
 
 === 2. 选择 SSL 配置
