--- a/versions/v2.13/modules/zh/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.13/modules/zh/pages/installation-and-upgrade/upgrades.adoc
@@ -1,6 +1,6 @@
 = 升级
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 本文介绍如何升级使用 Helm 安装在 Kubernetes 集群上的 Rancher Server。这些步骤也适用于使用 Helm 进行的离线安装。
@@ -72,7 +72,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,plain]
 ----
-helm fetch rancher-prime/rancher-prime
+helm fetch rancher-prime/rancher
 ----
 +
 你可以通过 `--version=` 标记，来指定要升级的目标 Chart 版本。例如：
@@ -81,7 +81,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 [,plain]
 ----
-helm fetch rancher-prime/rancher-prime --version=2.6.8
+helm fetch rancher-prime/rancher --version=2.6.8
 ----
 
 === 3. 升级 Rancher
@@ -135,7 +135,7 @@ hostname: rancher.my.org
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm upgrade rancher rancher-prime/rancher-prime \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -156,7 +156,7 @@ helm upgrade rancher rancher-prime/rancher-prime \
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 ----
-helm upgrade rancher-prime rancher-prime/rancher-prime \
+helm upgrade rancher-prime rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -176,7 +176,7 @@ helm get values rancher -n cattle-system -o yaml > values.yaml
 include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 +
 ----
-helm upgrade rancher rancher-prime/rancher-prime \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version=2.6.8
