--- a/versions/v2.13/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.13/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -1,6 +1,6 @@
 = 将 {rancher-product-name} 迁移到新集群
 :page-languages: [en, zh]
-:revdate: 2025-12-15
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 如果你要将 Rancher 迁移到一个新的 Kubernetes 集群，先不要在新集群上安装 Rancher。这是因为如果将 Rancher 还原到已安装 Rancher 的新集群，可能会导致问题。
@@ -168,7 +168,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=<same hostname as the server URL from the first Rancher server> \
   --version x.y.z
@@ -190,7 +190,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime -n cattle-system -f rancher-values.yaml --version x.y.z
+helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
 ----
 ====
 
