--- a/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -1,6 +1,6 @@
 = {rancher-product-name} Webhook
 :page-languages: [en, zh]
-:revdate: 2025-12-17
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 
 Rancher-Webhook 是 Rancher 的重要组件，它与 Kubernetes 结合使用，用于增强安全性并为 Rancher 管理的集群启用关键功能。
@@ -85,7 +85,7 @@ include::shared:ROOT:partial$zh/rancher-chart-rename.adoc[]
 
 [,bash]
 ----
-helm install rancher rancher-prime/rancher-prime \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
