--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -50,7 +50,7 @@ ifeval::["{build-type}" != "community"]
 Rancher {release-version} is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
 endif::[]
 
-For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes].
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
 
 ifeval::["{build-type}" != "community"]
 == What's New - SUSE Rancher Prime {release-version}
