--- a/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
@@ -44,7 +44,9 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 {rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
-For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/v2.12.0[v2.12.0 release notes].
+Rancher {release-version} is the latest patch release of Rancher {rn-component-version}. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
 
 == Changes Since v2.12.5
 
@@ -110,11 +112,11 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Versions
 
-== Images
+=== Images
 
 * rancher/rancher:{release-version}
 
-== Tools
+=== Tools
 
 * CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 
