--- a/versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc
@@ -28,7 +28,9 @@ If you are using Active Directory Federation Service (AD FS), upgrading to Ranch
 For more information see https://github.com/rancher/rancher/issues/48655[#48655].
 ====
 
-For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.11.0[v2.11.0 release notes].
+Rancher {release-version} is the latest patch release of Rancher {rn-component-version}. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
+
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
 
 == Changes Since v2.11.9
 
