Edit per updates in v2.13

--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -1,6 +1,8 @@
 * xref:release-notes.adoc[Release Notes]
+ifeval::["{build-type}" != "community"]
 ** xref:release-notes/v2.12.6.adoc[]
 ** xref:release-notes/v2.12.5.adoc[]
+endif::[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
